--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,22 @@ a {
   color: #1d1d1d;
   text-decoration: none;
 }
+img {
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+p {
+  line-height: 1.6;
+}
+
+/* Inner */
+.inner {
+  max-width: 980px;
+  margin: 0 auto; /* 첫번째: 위아래, 두번째: 사이드 */
+  padding: 0 20px;
+  position: relative;
+}
 
 /* Button */
 .btn {
@@ -39,14 +55,39 @@ a {
   box-shadow: 0 0 0 4px #81b9f1;
 }
 
+/* Background image text */
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* Links */
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+a.link {
+  color: #0071e3;
+  font-size: 19px;
+  line-height: 1.3;
+}
+a.link:hover {
+  text-decoration: underline;
+}
+a.link::after {
+  content: " >";
+}
+
 /* Header */
 header {
   background-color: #3a3a3a;
 }
 header .inner {
   max-width: 1020px;
-  margin: 0 auto; /* 첫번째: 위아래, 두번째: 사이드 */
-  position: relative;
 }
 header ul.menu {
   height: 44px;
@@ -278,7 +319,6 @@ nav {
 nav .inner {
   max-width: 1000px;
   height: 52px;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   /* inner는 가운데정렬을 해주는 용도 */
@@ -307,4 +347,51 @@ nav .menu li.active a {
 }
 nav .menu li.active:hover a {
   color: #1d1d1d;
+}
+
+/* Hero */
+.hero {
+  background-color: #f5f5f5;
+}
+.hero .inner {
+  border: 3px solid royalblue;
+  padding-bottom: 110px;
+}
+.hero h1 {
+  width: 221px;
+  height: 91px;
+  background-image: url("../images/hero_ipad_text.png");
+}
+.hero figure {
+}
+.hero figure img {
+}
+.hero figure figcaption {
+}
+.hero figure figcaption .caption-camera {
+}
+.hero figure figcaption .caption-chip {
+}
+.hero figure figcaption .caption-storage {
+}
+.hero h2 {
+  width: 738px;
+  height: 145px;
+  margin: 0 auto; /* margin: 0 auto는 요소의 가로너비가 있을때 가운데 정렬이 된다 */
+  background-image: url("../images/hero_headline.png");
+}
+.hero p.pricing {
+  margin-top: 40px;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+.hero p.description {
+  width: 88%;
+  margin: 18px auto 0; /* 3개일때는 위, 좌우, 아래 */
+  font-size: 19px;
+  text-align: center;
+}
+.hero .links {
+  margin-top: 30px;
 }
