--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+html {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-font: #1d1d1d;
+  --color-font-darkgray: #6e6e6e;
+  --color-font-lightgray: #f5f5f5;
+  --color-link: #0071e3;
+  --color-link-focus: #81b9f1;
+  --color-border: #d2d2d2;
+  --color-header: #3a3a3a;
+  --color-section: #f5f5f5;
+  --color-shadow: rgba(0, 0, 0, 0.4);
+}
 html.fixed {
   position: fixed;
   overflow-y: scroll;
@@ -9,10 +22,10 @@ body {
   line-height: 1;
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   word-break: keep-all;
-  color: #1d1d1d;
+  color: var(--color-font);
 }
 a {
-  color: #1d1d1d;
+  color: var(--color-font);
   text-decoration: none;
 }
 img {
@@ -44,15 +57,15 @@ p {
   outline: none;
   font-size: 11px;
   line-height: 1;
-  color: #fff;
-  background-color: #0071e3;
+  color: var(--color-white);
+  background-color: var(--color-link);
   cursor: pointer;
 }
 .btn:hover {
   opacity: 0.7;
 }
 .btn:focus {
-  box-shadow: 0 0 0 4px #81b9f1;
+  box-shadow: 0 0 0 4px var(--color-link-focus);
 }
 
 /* Background image text */
@@ -71,7 +84,7 @@ p {
   gap: 40px;
 }
 a.link {
-  color: #0071e3;
+  color: var(--color-link);
   font-size: 19px;
   line-height: 1.3;
 }
@@ -100,7 +113,8 @@ a.link::after {
 
 /* Header */
 header {
-  background-color: #3a3a3a;
+  --header-height: 44px;
+  background-color: var(--color-header);
   position: relative;
   z-index: 9; /* z-index는 position 속성의 값이 static이 아니어야 사용할 수 있다 */
 }
@@ -108,7 +122,7 @@ header .inner {
   max-width: 1020px;
 }
 header ul.menu {
-  height: 44px;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
 }
@@ -122,7 +136,7 @@ header ul.menu > li > a {
   font-size: 11px;
   display: flex;
   align-items: center;
-  color: #f5f5f5;
+  color: var(--color-font-lightgray);
   opacity: 0.8;
   text-decoration: none;
 }
@@ -153,10 +167,10 @@ header .basket {
   /* display: none; */
   width: 290px;
   padding: 10px 20px; /* 내부여백 첫번째:위아래, 두번째:좌우 */
-  border: 1px solid #d2d2d2;
+  border: 1px solid var(--color-border);
   border-radius: 10px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: var(--color-white);
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
@@ -181,8 +195,8 @@ header .basket .arrow::before {
   content: "";
   width: 12px;
   height: 12px;
-  border: 1px solid #d2d2d2;
-  background-color: #fff;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-white);
   transform: rotate(45deg);
   transform-origin: 0 0; /* 첫번째 값: x축, 두번째 값: y축 */
   position: absolute;
@@ -192,20 +206,20 @@ header .basket .arrow::before {
 header .basket .message {
   padding: 30px 0;
   font-size: 13px;
-  color: #6e6e6e;
+  color: var(--color-font-darkgray);
   text-align: center;
 }
 header .basket ul {
   margin-top: 10px;
 }
 header .basket ul li {
-  border-top: 1px solid #d2d2d2;
+  border-top: 1px solid var(--color-border);
 }
 header .basket ul li a {
   display: block; /* a태그는 인라인 요소이기 때문에 display:block을 사용해줘야 패딩이 적용된다  */
   padding: 14px;
   font-size: 13px;
-  color: #0071e3;
+  color: var(--color-link);
 }
 header .basket ul li a:hover {
   text-decoration: underline;
@@ -232,25 +246,25 @@ header .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--color-shadow);
 }
 header .search .textfield {
   position: relative;
 }
 header .search input {
   width: 100%;
-  height: 44px;
+  height: var(--header-height);
   padding: 0 40px;
   border: none;
   outline: none;
   box-sizing: border-box;
   background-color: transparent;
   font-size: 17px;
-  color: #fff;
+  color: var(--color-white);
 }
 header .search .search-icon {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url("../images/header_search.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -261,7 +275,7 @@ header .search .search-icon {
 }
 header .search .search-closer {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url("../images/header_close.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -279,14 +293,14 @@ header .search .autocompletes {
   padding: 26px 40px 20px; /* 값이 3개일때는? 위, 좌우, 아래 */
   border-radius: 0 0 18px 18px;
   box-sizing: border-box; /* padding이 들어갔을때는 보통 box-sizing 을 해주는거같다 */
-  background-color: #fff;
+  background-color: var(--color-white);
   position: absolute;
-  top: 44px;
+  top: var(--header-height);
   left: 0;
 }
 header .search .autocompletes h3 {
   font-size: 12px;
-  color: #6e6e6e;
+  color: var(--color-font-darkgray);
   margin-bottom: 12px;
 }
 header .search .autocompletes ul li a {
@@ -297,8 +311,8 @@ header .search .autocompletes ul li a {
   cursor: pointer;
 }
 header .search .autocompletes ul li:hover a {
-  background-color: #f5f5f5;
-  color: #0071e3;
+  background-color: var(--color-section);
+  color: var(--color-link);
 }
 header .search input,
 header .search .search-icon,
@@ -329,7 +343,7 @@ header.searching .search .autocompletes li {
 nav {
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid #d2d2d2;
+  border-bottom: 1px solid var(--color-border);
   position: sticky;
   top: 0;
   z-index: 8;
@@ -357,19 +371,19 @@ nav .menu li a {
   font-size: 11px;
 }
 nav .menu li:hover a {
-  color: #0071e3;
+  color: var(--color-link);
 }
 nav .menu li.active a {
   opacity: 0.5;
   cursor: default;
 }
 nav .menu li.active:hover a {
-  color: #1d1d1d;
+  color: var(--color-font);
 }
 
 /* Hero */
 .hero {
-  background-color: #f5f5f5;
+  background-color: var(--color-section);
 }
 .hero .inner {
   padding-bottom: 110px;
@@ -426,4 +440,42 @@ nav .menu li.active:hover a {
 }
 .hero .links {
   margin-top: 30px;
+}
+
+/* Power / Multiple Apps */
+.power {
+  margin-top: 110px;
+}
+.power .multiple-apps h1 {
+  width: 500px;
+  height: 280px;
+  background-image: url("../images/power_headline.png");
+  transform: translate(104px, 0);
+}
+.power .multiple-apps .figures {
+  height: 773px;
+}
+.power .multiple-apps figcaption {
+  width: 138px;
+  height: 46px;
+  background-image: url("../images/power_multiple_apps_caption.png");
+  transform: translate(703px, -47px);
+}
+/* Power / Arcade */
+.power .arcade {
+}
+.power .arcade .figures {
+}
+.power .arcde figure {
+}
+.power .arcade figcaption {
+}
+/* Power / Create */
+.power .create {
+}
+.power .create .figures {
+}
+.power .create figure {
+}
+.power .create figcaption {
 }
