--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,35 @@ a.link::after {
   font-size: 19.5px;
 }
 
+/* Whitebox */
+.whitebox {
+  max-width: 1386px;
+  margin: 0 auto;
+  padding: 100px 30px;
+  border-radius: 30px;
+  box-sizing: border-box;
+  background-color: var(--color-white);
+}
+.whitebox.whitebox--transparent {
+  background-color: transparent;
+}
+.whitebox .icon {
+  margin-bottom: 20px;
+}
+.whitebox h1 {
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.whitebox p {
+  margin-top: 20px;
+  font-size: 19px;
+}
+.whitebox a.link {
+  display: block;
+  margin-top: 26px;
+}
+
 /* Header */
 header {
   --header-height: 44px;
@@ -938,6 +967,27 @@ nav .menu li.active:hover a {
   height: 31px;
   background-image: url("../images/privacy_caption_touch_id.png");
   transform: translate(533px, 485px);
+}
+
+/* Accessibility */
+.accessibility {
+  margin-top: 266px;
+  margin-bottom: 170px;
+}
+.accessibility h1 {
+  width: 384px;
+  height: 270px;
+  background-image: url("../images/accessibility_headline.png");
+}
+.accessibility .infos {
+  margin-top: 20px;
+}
+.accessibility figure {
+  transform: translate(470px, -620px);
+}
+
+/* AR */
+.ar {
 }
 
 @keyframes sprite-icon {
