--- a/css/main.css
+++ b/css/main.css
@@ -1041,6 +1041,75 @@ nav .menu li.active:hover a {
   text-align: center;
 }
 
+/* Compare */
+.compare {
+  padding: 20px 20px 0;
+  background-color: var(--color-section);
+  text-align: center;
+}
+.compare .items {
+  display: flex;
+  justify-content: space-around;
+  max-width: 940px;
+  margin: 68px auto 74px;
+}
+.compare .item {
+  width: 190px;
+  padding-bottom: 34px;
+  border-bottom: 1px solid var(--color-border);
+  position: relative;
+}
+.compare .item .thumbnail {
+  height: 214px;
+  margin-bottom: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.compare .item span.new {
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  color: #bf4800;
+  position: absolute;
+  margin-top: 20px;
+  bottom: 245px;
+  left: 0;
+  font-size: 12px;
+}
+.compare .item ul.colors {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+.compare .item ul.colors li {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: lightgrey;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+.compare .item h3.name {
+  margin-bottom: 4px;
+  font-size: 22px;
+  font-weight: 500;
+}
+.compare .item .tagline {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+.compare .item .price {
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+.compare .item .btn {
+  margin: 0 auto 14px;
+}
+.compare .item a.link {
+  font-size: 14px;
+}
 @keyframes sprite-icon {
   /* 1~10 */
   0.00% {
