--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ img {
 p {
   line-height: 1.6;
 }
+sup {
+  margin-right: 6px;
+  font-size: 0.7em;
+  vertical-align: top;
+}
 
 /* Inner */
 .inner {
@@ -1057,8 +1062,6 @@ nav .menu li.active:hover a {
   width: 190px;
   padding-bottom: 34px;
   border-bottom: 1px solid var(--color-border);
-  margin-left: 20px;
-  position: relative;
 }
 .compare .item .thumbnail {
   height: 214px;
@@ -1066,17 +1069,6 @@ nav .menu li.active:hover a {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-}
-.compare .item span.new {
-  width: 100%;
-  display: block;
-  box-sizing: border-box;
-  color: #bf4800;
-  position: absolute;
-  margin-top: 20px;
-  bottom: 245px;
-  left: 0;
-  font-size: 12px;
 }
 .compare .item ul.colors {
   margin-bottom: 30px;
@@ -1111,6 +1103,53 @@ nav .menu li.active:hover a {
 .compare .item a.link {
   font-size: 14px;
 }
+
+/* Footer */
+footer {
+  background-color: var(--color-section);
+}
+/* Footer / Buyinfo */
+footer .buy-info {
+  padding: 76px 0;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  text-align: center;
+}
+footer .buy-info .icon {
+  width: 56px;
+  height: 56px;
+  margin: 0 auto 10px;
+}
+footer .buy-info h3 {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 600;
+}
+footer .buy-info p {
+  margin-bottom: 12px;
+  font-size: 14px;
+}
+footer .buy-info a.link {
+  font-size: 14px;
+}
+/* Footer / Warning */
+footer .warning {
+  padding: 18px 0 10px;
+  border-top: 1px solid var(--color-border);
+  border-bottom: 1px solid var(--color-border);
+}
+footer .warning ol {
+  list-style: decimal;
+  padding-left: 16px;
+}
+footer .warning li {
+  margin-bottom: 10px;
+  font-size: 11px;
+  line-height: 1.5;
+  color: var(--color-font-darkgray);
+}
+
 @keyframes sprite-icon {
   /* 1~10 */
   0.00% {
