--- a/css/main.css
+++ b/css/main.css
@@ -1184,6 +1184,38 @@ footer .breadcrumbs a::after {
 footer .breadcrumbs a:last-child:after {
   display: none;
 }
+
+/* Footer / Navigations */
+footer .navigations {
+  margin-bottom: 40px;
+  height: 344px; /* 지그재그 방향으로 정렬할때? 높이값을 지정해서 flex-direction을 column으로 해주면된다. */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+footer .navigations .map {
+  margin-top: 24px;
+}
+footer .navigations .map:nth-child(6) {
+  padding-bottom: 100px;
+}
+footer .navigations .map h3 {
+  font-size: 12px;
+  font-weight: 600;
+}
+footer .navigations .map li {
+  margin-top: 12px;
+  font-size: 12px;
+}
+footer .navigations .map li a {
+  color: var(--color-font-darkgray);
+}
+footer .navigations .map li a:hover {
+  text-decoration: underline;
+}
+
 @keyframes sprite-icon {
   /* 1~10 */
   0.00% {
