style : Main section 화면 넘침 제어

--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,11 @@ nav .menu li.active:hover a {
   color: var(--color-font);
 }
 
+/* Main */
+main {
+  overflow-x: hidden;
+}
+
 /* Hero */
 .hero {
   background-color: var(--color-section);
